// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`saveLocal 1`] = `
Object {
  "f": Array [
    Array [
      "type",
      "START",
    ],
  ],
}
`;

exports[`saveLocal 2`] = `
Object {
  "f": Array [
    Array [
      "type",
      "DONE",
    ],
  ],
}
`;

exports[`saveLocal 3`] = `
Object {
  "f": Array [
    Array [
      "type",
      "FLUSH",
    ],
  ],
}
`;

exports[`saveLocal 4`] = `
Object {
  "f": Array [
    Array [
      "type",
      "DELETE",
    ],
  ],
}
`;

exports[`saveLocal 5`] = `
Object {
  "f": Array [
    Array [
      "type",
      "FLUSH",
    ],
  ],
}
`;

exports[`saveLocal 6`] = `
Object {
  "f": Array [
    Array [
      "type",
      "DONE",
    ],
  ],
}
`;

exports[`saveLocal 7`] = `
Object {
  "f": Array [
    Array [
      "type",
      "FLUSH",
    ],
  ],
}
`;

exports[`saveLocal 8`] = `
Array [
  Array [
    "boxes",
    Object {
      "f": Array [
        Array [
          "running",
          Object {
            "$": "Set",
            "l": Array [
              Object {
                "r": 3,
              },
              Object {
                "r": 1,
              },
              Object {
                "r": 5,
              },
              Object {
                "r": 2,
              },
            ],
          },
        ],
        Array [
          "resume",
          Object {
            "r": 5,
          },
        ],
      ],
      "x": Array [
        Object {
          "f": Array [
            Array [
              "type",
              "DONE",
            ],
          ],
        },
        Object {
          "$": "_data",
          "f": Array [
            Array [
              "queue",
              Array [],
            ],
            Array [
              "$await",
              null,
            ],
            Array [
              "$",
              Object {},
            ],
            Array [
              "$step",
              7,
            ],
            Array [
              "$last",
              6,
            ],
            Array [
              "$arg",
              Object {
                "$": "undefined",
              },
            ],
          ],
        },
        Object {
          "$": "addFlush",
          "f": Array [
            Array [
              "queue",
              Array [],
            ],
            Array [
              "$await",
              Object {
                "$": "Residual",
                "f": Array [
                  Array [
                    "dest",
                    Array [],
                  ],
                  Array [
                    "parent",
                    null,
                  ],
                  Array [
                    "state",
                    1,
                  ],
                  Array [
                    "value",
                    Object {
                      "f": Array [
                        Array [
                          "value",
                          Object {
                            "r": 0,
                          },
                        ],
                        Array [
                          "done",
                          false,
                        ],
                      ],
                    },
                  ],
                ],
              },
            ],
            Array [
              "$",
              Object {},
            ],
            Array [
              "_input",
              null,
            ],
            Array [
              "$step",
              8,
            ],
            Array [
              "$last",
              7,
            ],
            Array [
              "$arg",
              Object {
                "$": "undefined",
              },
            ],
            Array [
              "_loop",
              Object {
                "r": 1,
              },
            ],
            Array [
              "_i",
              Object {
                "r": 0,
              },
            ],
          ],
        },
        Object {
          "$": "Async",
          "f": Array [
            Array [
              "dest",
              Array [],
            ],
            Array [
              "state",
              0,
            ],
            Array [
              "value",
              Object {
                "$": "undefined",
              },
            ],
            Array [
              "$",
              Object {},
            ],
            Array [
              "$await",
              Object {
                "r": 4,
              },
            ],
            Array [
              "_f",
              Object {
                "f": Array [
                  Array [
                    "_data",
                    Object {
                      "$": "_data_1",
                    },
                  ],
                ],
              },
            ],
            Array [
              "$step",
              9,
            ],
            Array [
              "cont",
              Object {
                "$": "Residual",
                "f": Array [
                  Array [
                    "dest",
                    Array [
                      Object {
                        "$": "saveLocalExit",
                      },
                    ],
                  ],
                  Array [
                    "parent",
                    Object {
                      "r": 3,
                    },
                  ],
                  Array [
                    "state",
                    0,
                  ],
                ],
              },
            ],
            Array [
              "$last",
              8,
            ],
            Array [
              "$arg",
              Object {
                "$": "undefined",
              },
            ],
            Array [
              "_loop",
              Object {
                "r": 5,
              },
            ],
            Array [
              "_i",
              Object {
                "r": 0,
              },
            ],
          ],
        },
        Object {
          "$": "Residual",
          "f": Array [
            Array [
              "dest",
              Array [
                Object {
                  "r": 3,
                },
              ],
            ],
            Array [
              "parent",
              null,
            ],
            Array [
              "state",
              0,
            ],
          ],
        },
        Object {
          "$": "saveLocal",
          "f": Array [
            Array [
              "queue",
              Array [
                Object {
                  "r": 4,
                },
              ],
            ],
            Array [
              "$await",
              Object {
                "$": "Idle",
              },
            ],
            Array [
              "$",
              Object {},
            ],
            Array [
              "_input",
              null,
            ],
            Array [
              "$step",
              13,
            ],
            Array [
              "$last",
              13,
            ],
            Array [
              "$arg",
              Object {
                "$": "undefined",
              },
            ],
            Array [
              "_state",
              null,
            ],
            Array [
              "_loop",
              Object {
                "r": 2,
              },
            ],
            Array [
              "_i",
              Object {
                "r": 0,
              },
            ],
            Array [
              "_frame",
              Object {
                "$": "undefined",
              },
            ],
          ],
        },
      ],
    },
  ],
  Array [
    "boxes",
    Object {
      "f": Array [
        Array [
          "running",
          Object {
            "$": "Set",
            "l": Array [
              Object {
                "r": 3,
              },
              Object {
                "r": 1,
              },
              Object {
                "r": 5,
              },
              Object {
                "r": 2,
              },
            ],
          },
        ],
        Array [
          "resume",
          Object {
            "r": 5,
          },
        ],
      ],
      "x": Array [
        Object {
          "f": Array [
            Array [
              "type",
              "DELETE",
            ],
          ],
        },
        Object {
          "$": "_data",
          "f": Array [
            Array [
              "queue",
              Array [],
            ],
            Array [
              "$await",
              null,
            ],
            Array [
              "$",
              Object {},
            ],
            Array [
              "$step",
              8,
            ],
            Array [
              "$last",
              7,
            ],
            Array [
              "$arg",
              Object {
                "$": "undefined",
              },
            ],
          ],
        },
        Object {
          "$": "addFlush",
          "f": Array [
            Array [
              "queue",
              Array [],
            ],
            Array [
              "$await",
              Object {
                "$": "Residual",
                "f": Array [
                  Array [
                    "dest",
                    Array [],
                  ],
                  Array [
                    "parent",
                    null,
                  ],
                  Array [
                    "state",
                    1,
                  ],
                  Array [
                    "value",
                    Object {
                      "f": Array [
                        Array [
                          "value",
                          Object {
                            "r": 0,
                          },
                        ],
                        Array [
                          "done",
                          false,
                        ],
                      ],
                    },
                  ],
                ],
              },
            ],
            Array [
              "$",
              Object {},
            ],
            Array [
              "_input",
              null,
            ],
            Array [
              "$step",
              8,
            ],
            Array [
              "$last",
              7,
            ],
            Array [
              "$arg",
              Object {
                "$": "undefined",
              },
            ],
            Array [
              "_loop",
              Object {
                "r": 1,
              },
            ],
            Array [
              "_i",
              Object {
                "r": 0,
              },
            ],
          ],
        },
        Object {
          "$": "Async",
          "f": Array [
            Array [
              "dest",
              Array [],
            ],
            Array [
              "state",
              0,
            ],
            Array [
              "value",
              Object {
                "$": "undefined",
              },
            ],
            Array [
              "$",
              Object {},
            ],
            Array [
              "$await",
              Object {
                "r": 4,
              },
            ],
            Array [
              "_f",
              Object {
                "f": Array [
                  Array [
                    "_data",
                    Object {
                      "$": "_data_1",
                    },
                  ],
                ],
              },
            ],
            Array [
              "$step",
              9,
            ],
            Array [
              "cont",
              Object {
                "$": "Residual",
                "f": Array [
                  Array [
                    "dest",
                    Array [
                      Object {
                        "$": "saveLocalExit",
                      },
                    ],
                  ],
                  Array [
                    "parent",
                    Object {
                      "r": 3,
                    },
                  ],
                  Array [
                    "state",
                    0,
                  ],
                ],
              },
            ],
            Array [
              "$last",
              8,
            ],
            Array [
              "$arg",
              Object {
                "$": "undefined",
              },
            ],
            Array [
              "_loop",
              Object {
                "r": 5,
              },
            ],
            Array [
              "_i",
              Object {
                "r": 0,
              },
            ],
          ],
        },
        Object {
          "$": "Residual",
          "f": Array [
            Array [
              "dest",
              Array [
                Object {
                  "r": 3,
                },
              ],
            ],
            Array [
              "parent",
              null,
            ],
            Array [
              "state",
              0,
            ],
          ],
        },
        Object {
          "$": "saveLocal",
          "f": Array [
            Array [
              "queue",
              Array [
                Object {
                  "r": 4,
                },
              ],
            ],
            Array [
              "$await",
              Object {
                "$": "Idle",
              },
            ],
            Array [
              "$",
              Object {},
            ],
            Array [
              "_input",
              null,
            ],
            Array [
              "$step",
              13,
            ],
            Array [
              "$last",
              13,
            ],
            Array [
              "$arg",
              Object {
                "$": "undefined",
              },
            ],
            Array [
              "_state",
              null,
            ],
            Array [
              "_loop",
              Object {
                "r": 2,
              },
            ],
            Array [
              "_i",
              Object {
                "r": 0,
              },
            ],
            Array [
              "_frame",
              Object {
                "$": "undefined",
              },
            ],
          ],
        },
      ],
    },
  ],
  Array [
    "boxes",
    Object {
      "f": Array [
        Array [
          "running",
          Object {
            "$": "Set",
            "l": Array [
              Object {
                "r": 3,
              },
              Object {
                "r": 1,
              },
              Object {
                "r": 5,
              },
              Object {
                "r": 2,
              },
            ],
          },
        ],
        Array [
          "resume",
          Object {
            "r": 5,
          },
        ],
      ],
      "x": Array [
        Object {
          "f": Array [
            Array [
              "type",
              "DONE",
            ],
          ],
        },
        Object {
          "$": "_data",
          "f": Array [
            Array [
              "queue",
              Array [],
            ],
            Array [
              "$await",
              null,
            ],
            Array [
              "$",
              Object {},
            ],
            Array [
              "$step",
              9,
            ],
            Array [
              "$last",
              8,
            ],
            Array [
              "$arg",
              Object {
                "$": "undefined",
              },
            ],
          ],
        },
        Object {
          "$": "addFlush",
          "f": Array [
            Array [
              "queue",
              Array [],
            ],
            Array [
              "$await",
              Object {
                "$": "Residual",
                "f": Array [
                  Array [
                    "dest",
                    Array [],
                  ],
                  Array [
                    "parent",
                    null,
                  ],
                  Array [
                    "state",
                    1,
                  ],
                  Array [
                    "value",
                    Object {
                      "f": Array [
                        Array [
                          "value",
                          Object {
                            "r": 0,
                          },
                        ],
                        Array [
                          "done",
                          false,
                        ],
                      ],
                    },
                  ],
                ],
              },
            ],
            Array [
              "$",
              Object {},
            ],
            Array [
              "_input",
              null,
            ],
            Array [
              "$step",
              8,
            ],
            Array [
              "$last",
              7,
            ],
            Array [
              "$arg",
              Object {
                "$": "undefined",
              },
            ],
            Array [
              "_loop",
              Object {
                "r": 1,
              },
            ],
            Array [
              "_i",
              Object {
                "r": 0,
              },
            ],
          ],
        },
        Object {
          "$": "Async",
          "f": Array [
            Array [
              "dest",
              Array [],
            ],
            Array [
              "state",
              0,
            ],
            Array [
              "value",
              Object {
                "$": "undefined",
              },
            ],
            Array [
              "$",
              Object {},
            ],
            Array [
              "$await",
              Object {
                "r": 4,
              },
            ],
            Array [
              "_f",
              Object {
                "f": Array [
                  Array [
                    "_data",
                    Object {
                      "$": "_data_1",
                    },
                  ],
                ],
              },
            ],
            Array [
              "$step",
              9,
            ],
            Array [
              "cont",
              Object {
                "$": "Residual",
                "f": Array [
                  Array [
                    "dest",
                    Array [
                      Object {
                        "$": "saveLocalExit",
                      },
                    ],
                  ],
                  Array [
                    "parent",
                    Object {
                      "r": 3,
                    },
                  ],
                  Array [
                    "state",
                    0,
                  ],
                ],
              },
            ],
            Array [
              "$last",
              8,
            ],
            Array [
              "$arg",
              Object {
                "$": "undefined",
              },
            ],
            Array [
              "_loop",
              Object {
                "r": 5,
              },
            ],
            Array [
              "_i",
              Object {
                "r": 0,
              },
            ],
          ],
        },
        Object {
          "$": "Residual",
          "f": Array [
            Array [
              "dest",
              Array [
                Object {
                  "r": 3,
                },
              ],
            ],
            Array [
              "parent",
              null,
            ],
            Array [
              "state",
              0,
            ],
          ],
        },
        Object {
          "$": "saveLocal",
          "f": Array [
            Array [
              "queue",
              Array [
                Object {
                  "r": 4,
                },
              ],
            ],
            Array [
              "$await",
              Object {
                "$": "Idle",
              },
            ],
            Array [
              "$",
              Object {},
            ],
            Array [
              "_input",
              null,
            ],
            Array [
              "$step",
              13,
            ],
            Array [
              "$last",
              13,
            ],
            Array [
              "$arg",
              Object {
                "$": "undefined",
              },
            ],
            Array [
              "_state",
              null,
            ],
            Array [
              "_loop",
              Object {
                "r": 2,
              },
            ],
            Array [
              "_i",
              Object {
                "r": 0,
              },
            ],
            Array [
              "_frame",
              Object {
                "$": "undefined",
              },
            ],
          ],
        },
      ],
    },
  ],
]
`;
